Bug 1698436 - Keep overflow/customize menu items aligned. r=desktop-theme-reviewers,harry
This also fixes an issue with block margins that I noticed while developing
this patch, namely that the Profiler menu item was a few pixels too short
in addition to being offset to the right.

Differential Revision: https://phabricator.services.mozilla.com/D109453

UltraBlame original commit: 9ba9e2a1353535edf26072ebbcba4af50df5beea

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -9343,6 +9343,25 @@ pack
 center
 ;
 }
+toolbarpaletteitem
+>
+#
+stop
+-
+reload
+-
+button
+{
+-
+moz
+-
+box
+-
+pack
+:
+inherit
+;
+}
 :
 root
 [
